<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/fib"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    <RadioGroup
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/FibJR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/FibJR" >
        </RadioButton>

        <RadioButton
            android:id="@+id/FibJI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/FibJI" >
        </RadioButton>

        <RadioButton
            android:id="@+id/FibNR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FibNR" >
        </RadioButton>
        <RadioButton
            android:id="@+id/FibNI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FibNI" >
        </RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/result"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

</LinearLayout>